# CppND-Deep-Neural-Net

./: CMakeLists.txt  README.md
cmake/: Eigen3Config.cmake  Eigen3ConfigVersion.cmake  Eigen3Targets.cmake
config/: l3.config
data/: X.csv  test.weights  test_5-18.weights
src/: activation.cpp  activation.h  layer.cpp  layer.h  loss.cpp  loss.h  main.cpp  matplotlibcpp.h  model.cpp  model.h  optimizer.cpp  optimizer.h  utils.cpp  utils.h
